Adapt to new server environment Improve documentation

--- a/include/config.php.example
+++ b/include/config.php.example
@@ -8,5 +8,7 @@ return array(
     'telegramAPIToken' => '',
     'urlPrefix' => '',
     'botSecret' => '',
+    'adminSecret' => '',
+    'maxDummyPlayers' => 0,
     'whitelist' => []
 );
